# tease

./: Cargo.toml  README.md
.github/workflows/: tests.yml
assets/: dropdown.html  number.html  slider.html
doc_chunks/: dropdown.html  number.html  slider.html
examples/: addition.rs  addition_without_closure.rs  automl.rs  hi.rs  inputs.rs  minimal.rs  smartcore.rs  tease.html
src/: cookbook.rs  html_chunks.rs  lib.rs
