[package]
name = "tease"
version = "0.1.1"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Rapidly prototype interfaces for your machine learning models"
readme = "README.md"
repository = "https://github.com/cmccomb/tease"
homepage = "https://github.com/cmccomb/tease"
documentation = "https://docs.rs/tease"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "ml", "ai", "smartcore", "gui"]
categories = ["algorithms", "mathematics", "gui"]
exclude = ["assets/"]

[dependencies]
wry = "0.18.2"

[dev-dependencies]
smartcore = "0.2.1"
automl = { git = "https://github.com/cmccomb/rust-automl" }
